@@ -2,7 +2,7 @@
 
 # also update the version number in the m4 macros below
 
-AC_INIT(vips, 7.28.4, vipsip@jiscmail.ac.uk)
+AC_INIT(vips, 7.28.5, vipsip@jiscmail.ac.uk)
 # required for gobject-introspection
 AC_PREREQ(2.62)
 
@@ -15,7 +15,7 @@ AC_CONFIG_MACRO_DIR([m4])
 # user-visible library versioning
 m4_define([vips_major_version], [7])
 m4_define([vips_minor_version], [28])
-m4_define([vips_micro_version], [4])
+m4_define([vips_micro_version], [5])
 m4_define([vips_version],
           [vips_major_version.vips_minor_version.vips_micro_version])
 
@@ -35,7 +35,7 @@ VIPS_VERSION_STRING=$VIPS_VERSION-`date`
 #   interface changes not backwards compatible?: reset age to 0
 
 LIBRARY_CURRENT=31
-LIBRARY_REVISION=4
+LIBRARY_REVISION=5
 LIBRARY_AGE=16
 
 # patched into include/vips/version.h
